--- a/hosted/style.css
+++ b/hosted/style.css
@@ -50,9 +50,10 @@ nav:nth-child(1) {
 .domoForm {
     border: 2px solid #338acc;
     height: 35px;
-    width: 700px;
+    width: fit-content;
     margin-top:0px;
     padding-top:10px;
+    padding-right:10px;
     background-color: #55acee;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
@@ -60,16 +61,16 @@ nav:nth-child(1) {
 
 .domoForm label {
     display: inline-block;
-    width: 75px;
+    width: auto;
     margin-left: 10px;
     font-size: 1.2em;
-    float: left;
+    /* float: left; */
     color: white;
 }
 
-.domoForm input[type=text] {
+/* .domoForm input[type=text] {
     float:left;
-}
+} */
 
 .makeDomoSubmit {
     transition: background-color 0.4s ease;
@@ -135,7 +136,7 @@ nav:nth-child(1) {
     background-color: #338acc;
 }
 
-#user, #pass, #pass2 {
+#user, #currPass, #pass, #pass2 {
     text-align: center;
     font-size: 1.1em;
     width: 180px;
@@ -188,7 +189,7 @@ nav:nth-child(1) {
     height: 450px;
     width: 300px;
     -ms-transform: rotate(330deg);
-    -webkit-transform: rotate(330deg); 
+    -webkit-transform: rotate(330deg);
     transform: rotate(330deg);
 }
 
@@ -247,6 +248,14 @@ h3.domoName {
     font-size: 1.5em;
 }
 
+h3.domoBDay {
+    float:left;
+    width: 200px;
+    font-weight: bold;
+    font-size: 1.5em;
+    text-align: center;
+}
+
 h3.domoAge {
     float:right;
     text-align: left;
@@ -254,6 +263,19 @@ h3.domoAge {
     font-weight: bold;
     padding-right: 40px;
     font-size: 1.5em;
+}
+
+h3.domoCheer {
+    float:left;
+    text-align: left;
+    width: auto;
+    font-weight: bold;
+    padding-left: 150px;
+    font-size: 3em;
+    background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 1px black;
 }
 
 .domo:first-child {
